@@ -2,32 +2,37 @@
 
 Memory efficient data structures & algorithms on (geo) graphs
 
-Build graph hopper:
-> cd core; mvn -DskipTests=true clean assembly:assembly
+Download OSM file and build graph hopper and run it:
 
-Example: routing
+> cd core; ./run-ui.sh
+
+when executing the command again the osm won't be parsed again.
+
+Hints
 ------------------
 
-Now import and view Germany OSM. It takes approx 25 min for import 
-and roughly 2 long minutes for the ugly&slow UI to pop up.
-You can download the OSM [here](http://download.geofabrik.de/osm/)
-> java -XX:PermSize=20m -XX:MaxPermSize=20m -Xmx2700m -Xms2700m -cp target/graphhopper-1.0-SNAPSHOT-jar-with-dependencies.jar de.jetsli.graph.ui.MiniGraphUI germany.osm
+If you want to import the Germany OSM. run:
 
- * now the ui should pop up
- * drag to move the map or scroll to zoom like in ordinary maps apps
- * click once to select a departure and another click to select the destination
- * a route should pop up like in this image ![from twitter](https://p.twimg.com/AvidlNPCMAA5e_n.png:medium)
+> cd core; ./run-ui.sh false
 
-### Warning
- 1. at the moment all operations require redrawing the graph which takes quite some time!
-  so don't click or drag too much ;)
- 2. when executing the command again the osm won't be parsed again.
-  Then you need to lower the Xmx and Xms value to 700m in order to increase the off-heap memory
+ * It takes approx 25 min for import and roughly 1 minute for the ugly&slow UI to pop up.
+ * After the UI popped up you can drag to move the map or scroll to zoom like in ordinary maps apps
+ * Click once to select a departure and another click to select the destination
+ * Then a route should pop up like in this image ![from twitter](https://p.twimg.com/AvidlNPCMAA5e_n.png:medium)
 
-Further examples
+Warning
 -----------------
 
+At the moment all operations require redrawing the graph which takes quite some time!
+So don't click or drag too much ;)
+
+License
+----------------
+
 This software stands under Apache License 2
+
+Infos
+----------------
 
 For more information have a look at
 http://karussell.github.com/GraphHopper/
